data/derived/sp14/progs/unify/prog2632.ml.out
Characters 100-102:
  if (x = [])
          ^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
